// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createObservableReducerContext should create context 1`] = `
<DocumentFragment>
  <div>
    <button
      data-testid="taskButton"
    />
    <button
      data-testid="badTaskButton"
    />
  </div>
</DocumentFragment>
`;

exports[`createObservableReducerContext should dispatch event 1`] = `
<DocumentFragment>
  <div>
    <button
      data-testid="taskButton"
    />
    <button
      data-testid="badTaskButton"
    />
  </div>
</DocumentFragment>
`;

exports[`createObservableReducerContext should dispatch event 2`] = `
Object {
  Symbol(SameObject caches): Object {
    "childNodes": NodeList [
      <div>
        <button
          data-testid="taskButton"
        />
        <button
          data-testid="badTaskButton"
        />
      </div>,
    ],
  },
}
`;

exports[`createObservableReducerContext should dispatch event 3`] = `
Object {
  Symbol(SameObject caches): Object {
    "childNodes": NodeList [
      <div>
        <button
          data-testid="taskButton"
        />
        <button
          data-testid="badTaskButton"
        />
      </div>,
    ],
  },
}
`;

exports[`createObservableReducerContext should error out for bad stream 1`] = `
<DocumentFragment>
  <div>
    <button
      data-testid="taskButton"
    />
    <button
      data-testid="badTaskButton"
    />
  </div>
</DocumentFragment>
`;
